# espanso

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md  biome.json  default.nix  flake.nix  snapcraft.yaml  tarpaulin.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/scripts/: Dockerfile
.github/workflows/: ci-arm.yml  ci.yml  create-release-draft.yml  dev-release.yml  nix-build.yml  prod-release.yml  update-flake.yml
docs/src/: SUMMARY.md  ch03-00-building-and-compilation.md  ch03-01-windows.md  ch03-02-macos.md  ch03-03-linux.md  ch04-01-creating-a-pr.md  ch04-02-recipes-and-cookbook.md  ch04-03-creating-a-release.md
espanso/: Cargo.toml
espanso-clipboard/src/: lib.rs
espanso-config/: Cargo.toml
espanso-config/src/: lib.rs
espanso-detect/: Cargo.toml
espanso-engine/: Cargo.toml
espanso-engine/src/: lib.rs
espanso-info/: Cargo.toml
espanso-inject/: Cargo.toml
espanso-mac-utils/: Cargo.toml
espanso-modulo/: Cargo.toml  build.rs
espanso-package/: Cargo.toml
espanso-render/: Cargo.toml
espanso-render/src/extension/: choice.rs  clipboard.rs  date.rs  echo.rs  exec_util.rs  form.rs  random.rs  script.rs  shell.rs
espanso-render/src/renderer/: mod.rs  resolve.rs  util.rs
espanso-ui/: Cargo.toml
espanso/src/: ipc.rs  (+6 more)
nix/: espanso.nix
schemas/: config.schema.json  match.schema.json
scripts/: build_windows_installer.ps1  build_windows_portable.ps1  build_windows_resources.ps1  create_app_image.sh  create_bundle.sh  format_clang.rs  format_clang.sh  publish_homebrew_version.sh
(+277 files in other folders)
